@@ -3,6 +3,7 @@ package net.lecousin.framework.application;
 import java.io.Closeable;
 import java.lang.management.ManagementFactory;
 import java.lang.management.OperatingSystemMXBean;
+import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -27,6 +28,7 @@ import net.lecousin.framework.util.Pair;
 public class StandaloneLCCore implements LCCore.Environment {
 
 	/** Constructor. */
+	@SuppressWarnings("squid:S106") // print to System.out because logging system not yet available
 	public StandaloneLCCore() {
 		System.out.println("net.lecousin.framework " + LCCoreVersion.VERSION);
 		startTime = System.nanoTime();
@@ -41,7 +43,7 @@ public class StandaloneLCCore implements LCCore.Environment {
 	private Application app = null;
 	private long startTime;
 	private boolean closing;
-	private List<Thread> threadsBeforeInit = new LinkedList<Thread>();
+	private List<Thread> threadsBeforeInit = new LinkedList<>();
 	private ArrayList<Closeable> toCloseSync = new ArrayList<>();
 	private ArrayList<AsyncCloseable<?>> toCloseAsync = new ArrayList<>();
 	private int nbCPUThreads = -1;
@@ -56,27 +58,34 @@ public class StandaloneLCCore implements LCCore.Environment {
 			throw new IllegalStateException("Cannot add several application on a standalone LCCore environment");
 	}
 	
+	private static final String ERROR_ALREADY_INITIALIZED = "Threading has been already initialized.";
+	
 	/** Set the number of CPU threads to use by multi-threading system. */
 	public void setCPUThreads(int nbThreads) {
-		if (Threading.isInitialized()) throw new IllegalStateException("Threading has been already initialized.");
+		if (Threading.isInitialized()) throw new IllegalStateException(ERROR_ALREADY_INITIALIZED);
 		nbCPUThreads = nbThreads;
 	}
 	
 	/** Set the number of threads to use by multi-threading system for unmanaged tasks. */
 	public void setUnmanagedThreads(int nbThreads) {
-		if (Threading.isInitialized()) throw new IllegalStateException("Threading has been already initialized.");
+		if (Threading.isInitialized()) throw new IllegalStateException(ERROR_ALREADY_INITIALIZED);
 		nbUnmanagedThreads = nbThreads;
 	}
 	
 	/** Set the drives provider to use by multi-threading system. */
 	public void setDrivesProvider(DrivesProvider provider) {
-		if (Threading.isInitialized()) throw new IllegalStateException("Threading has been already initialized.");
+		if (Threading.isInitialized()) throw new IllegalStateException(ERROR_ALREADY_INITIALIZED);
 		drivesProvider = provider;
 	}
 	
-	public static long logThreadingInterval = 30000;
+	private static long logThreadingInterval = 30000;
+	
+	public static void setLogThreadingInterval(long interval) {
+		logThreadingInterval = interval;
+	}
 	
 	@Override
+	@SuppressWarnings("squid:S1312") // logger is used only in debug mode, we do not want it as static
 	public void start() {
 		// start multi-threading system
 		Threading.init(
@@ -96,30 +105,33 @@ public class StandaloneLCCore implements LCCore.Environment {
 				}
 				
 				private boolean closed = false;
+				private final Object lock = new Object();
 				
 				@Override
 				public void run() {
 					do {
-						synchronized (this) {
-							try { this.wait(logThreadingInterval); }
-							catch (InterruptedException e) { return; }
+						synchronized (lock) {
+							try { lock.wait(logThreadingInterval); }
+							catch (InterruptedException e) {
+								Thread.currentThread().interrupt();
+								return;
+							}
 						}
 						if (closed) return;
 						logger.debug("\n" + Threading.debug());
-					} while (!closed);
+					} while (true);
 				}
 				
 				@Override
 				public void close() {
-					synchronized (this) {
+					synchronized (lock) {
 						closed = true;
-						this.notify();
+						lock.notify();
 					}
 				}
 			}
 			
 			if (logger.debug()) {
-				@SuppressWarnings("resource")
 				ThreadingLogger t = new ThreadingLogger();
 				t.start();
 				app.toClose(t);
@@ -168,7 +180,14 @@ public class StandaloneLCCore implements LCCore.Environment {
 	}
 
 	@Override
-	@SuppressWarnings("restriction")
+	@SuppressWarnings({
+		"squid:S1872", // to avoid class loading issue
+		"squid:S106", // loggers are not available while shutting down
+		"squid:S2142", // we are shutting down properly
+		"squid:S3014", // this is intentional
+		"squid:S135", // this would make the code more difficult to read
+		"squid:S3776", // complexity: we do not want to split into several methods
+	})
 	public void stop() {
 		closing = true;
 		if (!app.isStopping())
@@ -177,28 +196,28 @@ public class StandaloneLCCore implements LCCore.Environment {
 		System.out.println(" * Closing resources");
 		for (Closeable c : new ArrayList<>(toCloseSync)) {
 			System.out.println("     - " + c);
-			try { c.close(); } catch (Throwable t) {
+			try { c.close(); } catch (Exception t) {
 				System.err.println("Error closing resource " + c);
 				t.printStackTrace(System.err);
 			}
 		}
 
-		List<Pair<AsyncCloseable<?>,ISynchronizationPoint<?>>> closing = new LinkedList<>();
+		List<Pair<AsyncCloseable<?>,ISynchronizationPoint<?>>> closingResources = new LinkedList<>();
 		for (AsyncCloseable<?> s : new ArrayList<>(toCloseAsync)) {
 			System.out.println(" * Closing " + s);
-			closing.add(new Pair<>(s, s.closeAsync()));
+			closingResources.add(new Pair<>(s, s.closeAsync()));
 		}
 		toCloseAsync.clear();
 		long start = System.currentTimeMillis();
 		do {
-			for (Iterator<Pair<AsyncCloseable<?>,ISynchronizationPoint<?>>> it = closing.iterator(); it.hasNext(); ) {
+			for (Iterator<Pair<AsyncCloseable<?>,ISynchronizationPoint<?>>> it = closingResources.iterator(); it.hasNext(); ) {
 				Pair<AsyncCloseable<?>,ISynchronizationPoint<?>> s = it.next();
 				if (s.getValue2().isUnblocked()) {
 					System.out.println(" * Closed: " + s.getValue1());
 					it.remove();
 				}
 			}
-			if (closing.isEmpty()) break;
+			if (closingResources.isEmpty()) break;
 			try { Thread.sleep(100); }
 			catch (InterruptedException e) { break; }
 			if (System.currentTimeMillis() - start > 15000) {
@@ -217,8 +236,8 @@ public class StandaloneLCCore implements LCCore.Environment {
 				if (thread.getKey() == Thread.currentThread()) continue;
 				ThreadGroup g = thread.getKey().getThreadGroup();
 				if (g == null || "system".equals(g.getName())) continue;
+				if ("DestroyJavaVM".equals(thread.getKey().getName())) continue;
 				if (thread.getKey().getName().startsWith("AWT-")) continue;
-				if (thread.getKey().getName().equals("DestroyJavaVM")) continue;
 				if (threadsBeforeInit.contains(thread.getKey())) {
 					if ((count % 10) == 0)
 						System.out.println("Thread ignored because started before: " + thread.getKey());
@@ -249,18 +268,21 @@ public class StandaloneLCCore implements LCCore.Environment {
 		OperatingSystemMXBean os = ManagementFactory.getOperatingSystemMXBean();
 		try {
 			ClassLoader.getSystemClassLoader().loadClass("com.sun.management.OperatingSystemMXBean");
-			if (os instanceof com.sun.management.OperatingSystemMXBean) {
-				long cpuUsage = ((com.sun.management.OperatingSystemMXBean)os).getProcessCpuTime();
+			if ("com.sun.management.OperatingSystemMXBean".equals(os.getClass().getName())) {
+				Method getProcessCpuTime = os.getClass().getMethod("getProcessCpuTime");
+				Long cpuUsage = (Long)getProcessCpuTime.invoke(os);
 				System.out.println("JVM used "
-					+ String.format("%.5f", new Double(cpuUsage * 1.d / 1000000000)) + "s. of CPU, while running "
-					+ String.format("%.5f", new Double((end - startTime) * 1.d / 1000000000)) + "s. with "
+					+ String.format("%.5f", Double.valueOf(cpuUsage.longValue() * 1.d / 1000000000)) + "s. of CPU, while running "
+					+ String.format("%.5f", Double.valueOf((end - startTime) * 1.d / 1000000000)) + "s. with "
 					+ os.getAvailableProcessors() + " processors ("
-					+ String.format("%.2f", new Double(cpuUsage * 100.d / ((end - startTime) * os.getAvailableProcessors())))
+					+ String.format("%.2f",
+						Double.valueOf(cpuUsage.longValue() * 100.d / ((end - startTime) * os.getAvailableProcessors())))
 					+ "%)");
-			} else
-				throw new Exception();
-		} catch (Throwable t) {
-			System.out.println("JVM has run during " + String.format("%.5f", new Double((end - startTime) * 1.d / 1000000000)) + "s.");
+				return;
+			}
+		} catch (Exception t) {
+			// ignore and log generic line
 		}
+		System.out.println("JVM has run during " + String.format("%.5f", Double.valueOf((end - startTime) * 1.d / 1000000000)) + "s.");
 	}
 }
