@@ -1,18 +1,20 @@
 package net.lecousin.framework.application.libraries.artifacts.maven;
 
 import java.io.File;
-import java.net.URL;
+import java.io.IOException;
+import java.net.URI;
 import java.util.LinkedList;
 import java.util.List;
 
 import net.lecousin.framework.application.LCCore;
+import net.lecousin.framework.application.libraries.LibraryManagementException;
 import net.lecousin.framework.concurrent.Task;
 import net.lecousin.framework.concurrent.synch.AsyncWork;
 import net.lecousin.framework.exception.NoException;
 import net.lecousin.framework.io.IO;
 import net.lecousin.framework.io.buffering.SimpleBufferedReadable;
 import net.lecousin.framework.io.provider.IOProvider;
-import net.lecousin.framework.io.provider.IOProviderFromURL;
+import net.lecousin.framework.io.provider.IOProviderFromURI;
 import net.lecousin.framework.log.Logger;
 import net.lecousin.framework.xml.XMLStreamEvents.ElementContext;
 import net.lecousin.framework.xml.XMLStreamEvents.Event.Type;
@@ -50,16 +52,12 @@ public class MavenRemoteRepository implements MavenRepository {
 	
 	@Override
 	public boolean isSame(String url, boolean releasesEnabled, boolean snapshotsEnabled) {
-		if (releasesEnabled != this.releasesEnabled)
-			return false;
-		if (snapshotsEnabled != this.snapshotsEnabled)
-			return false;
-		if (!url.equals(this.url))
-			return false;
-		return true;
+		return
+			releasesEnabled == this.releasesEnabled &&
+			snapshotsEnabled == this.snapshotsEnabled &&
+			url.equals(this.url);
 	}
 	
-	@SuppressWarnings("resource")
 	@Override
 	public AsyncWork<List<String>, NoException> getAvailableVersions(String groupId, String artifactId, byte priority) {
 		String path = groupId.replace('.', '/') + '/' + artifactId + "/maven-metadata.xml";
@@ -67,8 +65,8 @@ public class MavenRemoteRepository implements MavenRepository {
 			logger.info("Downloading " + url + path);
 		IO.Readable io;
 		try {
-			IOProvider p = IOProviderFromURL.getInstance().get(new URL(url + path));
-			if (p == null || !(p instanceof IOProvider.Readable))
+			IOProvider p = IOProviderFromURI.getInstance().get(new URI(url + path));
+			if (!(p instanceof IOProvider.Readable))
 				return new AsyncWork<>(null, null);
 			io = ((IOProvider.Readable)p).provideIOReadable(priority);
 		} catch (Exception e) {
@@ -111,21 +109,21 @@ public class MavenRemoteRepository implements MavenRepository {
 				result.unblockSuccess(null);
 			}
 		}), true);
-		result.listenInline(() -> { io.closeAsync(); });
+		io.closeAfter(result);
 		return result;
 	}
 	
 	@Override
-	public AsyncWork<MavenPOM, Exception> load(
+	public AsyncWork<MavenPOM, LibraryManagementException> load(
 		String groupId, String artifactId, String version, MavenPOMLoader pomLoader, byte priority
 	) {
 		String path = groupId.replace('.', '/') + '/' + artifactId + '/' + version + '/' + artifactId + '-' + version + ".pom";
 		if (logger.info())
 			logger.info("Downloading " + url + path);
 		try {
-			return pomLoader.loadPOM(new URL(url + path), true, priority);
+			return pomLoader.loadPOM(new URI(url + path), true, priority);
 		} catch (Exception e) {
-			return new AsyncWork<>(null, e);
+			return new AsyncWork<>(null, new MavenPOMException("Error loading POM file " + url + path, e));
 		}
 	}
 
@@ -135,7 +133,9 @@ public class MavenRemoteRepository implements MavenRepository {
 	}
 	
 	@Override
-	public AsyncWork<File, Exception> loadFile(String groupId, String artifactId, String version, String classifier, String type, byte priority) {
+	public AsyncWork<File, IOException> loadFile(
+		String groupId, String artifactId, String version, String classifier, String type, byte priority
+	) {
 		// TODO
 		return new AsyncWork<>(null, null);
 	}
